--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,9 +6,15 @@ BUILD		=	./build
 
 SRC			=	./src
 
-DEP			=	
+DEP			=	$(patsubst %.h, $(INCLUDE)/%.h,\
+				defines.h \
+				philo.h) Makefile
 
-SRCS		=	
+SRCS		=	$(patsubst %.c, $(SRC)/%.c,\
+				ft_atol.c \
+				parse_2.c \
+				parse.c \
+				main.c)
 
 OBJS		=	$(patsubst $(SRC)/%.c, $(BUILD)/%.o, $(SRCS))
 
@@ -16,13 +22,22 @@ CC			=	cc
 
 RM			=	rm -rf
 
-CFLAGS		=	-g3 -Wall -Wextra -Werror -fsanitize=address
+CFLAGS		=	-g3 -Wall -Wextra -Werror -fsanitize=thread
 
 LFLAGS		=	
 
 IFLAGS		=	-I./include
 
+# Colors
+
+RESET	=	\033[0m
+RED		=	\033[31m
+GREEN	=	\033[32m
+YELLOW	=	\033[33m
+BLUE	=	\033[34m
+
 $(BUILD)/%.o: $(SRC)/%.c $(DEP)
+				@echo "${YELLOW}Compiling $<.${RESET}"
 				@$(CC) $(CFLAGS) $(IFLAGS) -c $< -o $@
 
 all:		$(NAME)
