--- a/philo/Makefile
+++ b/philo/Makefile
@@ -11,9 +11,8 @@ DEP			=	$(patsubst %.h, $(INCLUDE)/%.h,\
 				philo.h) Makefile
 
 SRCS		=	$(patsubst %.c, $(SRC)/%.c,\
-				ft_atol.c \
-				parse_2.c \
-				parse.c \
+				ft_atol.c queue.c \
+				parse_2.c parse.c \
 				init.c \
 				main.c)
 
