--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,12 @@
   ],
   "cmake.configureOnOpen": false,
   "files.associations": {
+    "philo.h": "c",
+    "stdint.h": "c",
+    "time.h": "c",
+    "defines.h": "c",
+    "types.h": "c",
+    "_types.h": "c"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
