--- a/philo/Makefile
+++ b/philo/Makefile
@@ -22,7 +22,7 @@ CC			=	cc
 
 RM			=	rm -rf
 
-CFLAGS		=	-g -Wall -Wextra -Werror -fsanitize=address
+CFLAGS		=	-g -Wall -Wextra -Werror #-fsanitize=thread
 
 LFLAGS		=	
 
