--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,7 +68,8 @@
     "time.h": "c",
     "defines.h": "c",
     "types.h": "c",
-    "_types.h": "c"
+    "_types.h": "c",
+    "philo_bonus.h": "c"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
