Minimal viable product

--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -22,7 +22,7 @@ CC			=	cc
 
 RM			=	rm -rf
 
-CFLAGS		=	-Wall -Wextra -Werror #-g #-fsanitize=address
+CFLAGS		=	-Wall -Wextra -Werror -g -fsanitize=address
 
 LFLAGS		=	-lpthread
 
